Remove all traces of 'the Grid'
- references to DAS and GRID are removed
- A useless file is deleted too. I found this one in the docker image.

[root@7871c5b819cb /]# rpm -qf /etc/gridinit/gridinit.conf
openio-gridinit-1.6-2.el7.oio.x86_64
[root@7871c5b819cb /]# cat /etc/gridinit/gridinit.conf
[Default]
listen=/var/run/gridinit.sock
pidfile=/var/run/gridinit.pid
uid=admgrid
gid=admgrid
working_dir=/GRID/common/core

limit.core_size=-1
limit.max_files=8192
limit.stack_size=1024

include=/GRID/*/conf/gridinit.conf.d/*

--- a/gridinit.conf
+++ b/gridinit.conf
@@ -17,7 +17,7 @@ gid=root
 # as configuration files. Only 'Service.*' sections will be considered
 # in these files.
 # No default value.
-include=/GRID/*/conf/gridinit.conf.d/*
+include=/etc/gridinit.d/*
 
 # Default:0
 # Set this to a non-zero to inherit the environement from the gridinit.
@@ -87,8 +87,8 @@ on_die=respawn
 
 # env.STRING : STRING
 # 
-env.PATH=/bin:/usr/bin:/usr/local/bin:/home/a127803/INSTALL/bin
-env.LD_LIBRARY_PATH=/lib:/usr/lib:/usr/local/lib:/home/a127803/INSTALL/lib
+env.PATH=/bin:/usr/bin:/usr/local/bin
+env.LD_LIBRARY_PATH=/lib:/usr/lib:/usr/local/lib
 
 # uid : STRING | INTEGER
 # Ignored if the gridinit uid is not 0
