Comment socket listen path in default config file
This is the source code default value and the official builds will pass
this value via `cmake -DGRIDINIT_SOCK_PATH` anyways.

--- a/gridinit.conf
+++ b/gridinit.conf
@@ -1,5 +1,5 @@
 [Default]
-listen=/var/run/gridinit.sock
+#listen=/var/run/gridinit.sock
 pidfile=/var/run/gridinit.pid
 
 # Default:uid : STRING | INTEGER
