--- a/gridinit.conf
+++ b/gridinit.conf
@@ -79,7 +79,7 @@ command=gridinit_testcmd /tmp/key0.out 5
 # are sent.
 enabled=true
 
-# on_die : 'cry' | 'respawn' | 'exit'
+# on_die : 'cry' | 'respawn'
 # Optional and dangerous directive telling what to do with the whole
 # gridinit when the current service dies, whatever the normality of
 # the death.
