Clean the headers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,6 +96,9 @@ set(CMAKE_LIBRARY_PATH "")
 set(CMAKE_INCLUDE_PATH "")
 include_directories(AFTER ${GLIB2_INCLUDE_DIRS})
 
+add_definitions(-DLOG_DOMAIN="gridinit")
+add_definitions(-DGRIDINIT_DOMAIN="gridinit")
+
 add_subdirectory(./lib)
 add_subdirectory(./main)
 
