--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -5,9 +5,7 @@ add_library(gridinit-utils STATIC
 		uid.c
 		common.c
 		limits.c
-		children.c
-		gridinit-utils.h
-		gridinit-internals.h)
+		children.c)
 
 target_link_libraries(gridinit-utils
 		${GLIB2_LIBRARIES})
