--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,13 @@ install:
   - sudo apt-get update -qq
   - sudo apt-get install -y --force-yes libevent-2.0-5 libevent-dev make cmake libglib2.0-dev
   - virtualenv $HOME/oio && source $HOME/oio/bin/activate
-
 env:
-  - TEST_SUITE=build
-
+  matrix:
+    - BUILD_TYPE=Debug
+    - BUILD_TYPE=Release
 script:
   - set -e
   - mkdir /tmp/oio && source $HOME/oio/bin/activate
   - export CMAKE_OPTS='-DCMAKE_INSTALL_PREFIX=/tmp/oio -DLD_LIBDIR=lib -DZK_LIBDIR=/usr/lib'
-  - if [ "build" == "${TEST_SUITE/*build*/build}" ] ; then cmake ${CMAKE_OPTS} -DCMAKE_BUILD_TYPE="Release" . && make all && make clean ; fi
+  - cmake ${CMAKE_OPTS} -DCMAKE_BUILD_TYPE=$BUILD_TYPE .
+  - make all
