--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,14 @@ install:
   - sudo apt-add-repository "deb http://mirror.openio.io/pub/repo/openio/sds/17.04/ubuntu/trusty ./"
   - sudo apt-get update -qq
   - sudo apt-get install -y --force-yes libevent-2.0-5 libevent-dev make cmake libglib2.0-dev
-  - virtualenv $HOME/oio && source $HOME/oio/bin/activate
 env:
   matrix:
     - BUILD_TYPE=Debug
     - BUILD_TYPE=Release
 script:
   - set -e
-  - mkdir /tmp/oio && source $HOME/oio/bin/activate
-  - export CMAKE_OPTS='-DCMAKE_INSTALL_PREFIX=/tmp/oio -DLD_LIBDIR=lib -DZK_LIBDIR=/usr/lib'
+  - mkdir /tmp/oio
+  - export CMAKE_OPTS='-DCMAKE_INSTALL_PREFIX=/tmp/oio -DLD_LIBDIR=lib'
   - cmake ${CMAKE_OPTS} -DCMAKE_BUILD_TYPE=$BUILD_TYPE .
-  - make all
+  - make -j 4 all
+  - make install
