gridnit.conf: Fix the sample configuration

--- a/gridinit.conf
+++ b/gridinit.conf
@@ -1,15 +1,19 @@
 [Default]
-#listen=/var/run/gridinit.sock
-pidfile=/var/run/gridinit.pid
+# Default:listen GRIDINIT_SOCK_PATH
+listen=/tmp/gridinit.sock
+
+# No default value
+# Specify a path to let gridinti write its pid file.
+pidfile=/tmp/gridinit.pid
 
 # Default:uid : STRING | INTEGER
 # The default user ID to be applied to services. You can use even
-# a logical name or its ID. 
+# a logical name or its ID.
 uid=root
 
 # Default:gid : STRING | INTEGER
 # The default group ID to be applied to services. You can use even
-# a logical name or its ID. 
+# a logical name or its ID.
 gid=root
 
 # Default:include : PATTERN
@@ -43,59 +47,37 @@ limit.core_size=-1
 limit.max_files=8192
 
 # Default:limit.stack_size : INTEGER
-# Default maximal thread stack size in kilobytes for each 
+# Default maximal thread stack size in kilobytes for each
 # Default value : 1024
 limit.stack_size=1024
 
-# Default:groups_only : STRING[,STRING]...
-# Set this variable if you want to filter the services. Only those
-# matching one of the given groups will be considered by CLI
-# start/stop commands
-groups_only=NS-common,NS-stgdev
 
-[service.key0]
-
-# group : STRING
-# Optional configuration directive setting an arbitrary tag on the
-# service. This tag allows start/stop CLI commands to work on the current
-# service when an argument with the form '@STRING' is present and STRING
-# matches the current service's group. 
-group=NS0
-
-# command : STRING
-# Mandatory Directive
-command=gridinit_testcmd /tmp/key0.out 5
-
-# enabled : BOOL
-# Optional directive telling if the service is allowed to start.
-# A disabled service cannot be started even if start CLI commands
-# are sent.
+[service.key-down]
+group=NS0,local
+command=/bin/sleep 15
 enabled=true
-
-# on_die : 'cry' | 'respawn'
-# Optional and dangerous directive telling what to do with the whole
-# gridinit when the current service dies, whatever the normality of
-# the death.
 on_die=respawn
-
-# env.STRING : STRING
-# 
 env.PATH=/bin:/usr/bin:/usr/local/bin
 env.LD_LIBRARY_PATH=/lib:/usr/lib:/usr/local/lib
+start_at_boot=false
 
-# uid : STRING | INTEGER
-# Ignored if the gridinit uid is not 0
-uid=root
 
-# gid : STRING | INTEGER
-# Ignored if the gridinit uid is not 0
-gid=root
+[service.key-disabled]
+group=NS0,local
+command=/bin/sleep 15
+enabled=false
+on_die=respawn
+env.PATH=/bin:/usr/bin:/usr/local/bin
+env.LD_LIBRARY_PATH=/lib:/usr/lib:/usr/local/lib
+start_at_boot=true
 
-# start_at_boot : BOOL
-# Optional, default: true
-# Tells if the service has to be started when it is met for the first
-# time (i.e. not changed if the service is refreshed after a configuration
-# reload). 'start_at_boot' is overriden by 'enable' or CLI 'start' and
-# 'stop' commands.
+
+[service.key1]
+group=NS1,local
+command=/bin/sleep 25
+enabled=true
+on_die=respawn
+env.PATH=/bin:/usr/bin:/usr/local/bin
+env.LD_LIBRARY_PATH=/lib:/usr/lib:/usr/local/lib
 start_at_boot=true
 
