[CMAKE] add an error message if you are not using gcc as a compiler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,14 @@ if (CMAKE_COMPILER_IS_GNUCC)
 	#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Winline")
 	#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wconversion")
 	#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wswitch-enum")
+else()
+	message("The default compiler set in CC is not supported.")
+	message("You need to use gcc with a version >= 4.2. ")
+	message("You can set your default compiler either by updating your CC variable environment:")
+	message("export CC=/path/to/gcc")
+	message("Or by adding a flag when calling CMake: ")
+	message("-D CMAKE_C_COMPILER=gcc")
+	message( FATAL_ERROR "CMake will exit.")
 endif()
 
 if (CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
