gridinit: Complete the sample configuration

--- a/gridinit.conf
+++ b/gridinit.conf
@@ -53,12 +53,39 @@ limit.stack_size=1024
 
 
 [service.key-down]
+# group : STRING [ "," STRING ]...
+# A coma-separated sequence of tokens. Each tokens is the name of a
+# group the current service belongs to. It is usefull to have the commands
+# target many services at once, when specifying @groups instead of services
+# IDs.
 group=NS0,local
+
+# The command to be executed.
 command=/bin/sleep 15
-enabled=true
-on_die=respawn
+
+# Supersedes the default env variale with the same key.
 env.PATH=/bin:/usr/bin:/usr/local/bin
+
+# Supersedes the default env variale with the same key.
 env.LD_LIBRARY_PATH=/lib:/usr/lib:/usr/local/lib
+
+# enabled : BOOL
+# Tells gridinit to consider (or not) that section in the configuration.
+enabled=true
+
+# on_die : "respawn" | "cry"
+# Tells what to do when the child dies.
+# - "respawn": it will be respawn N times (after N attempts, it will be
+#   considered BROKEN and it will have to be repaired.
+# - "cry": an alert will be logged, and that's it.
+on_die=respawn
+
+# start_at_boot : BOOL
+# Optional, default: true
+# Tells if the service has to be started when it is met for the first
+# time (i.e. not changed if the service is refreshed after a configuration
+# reload). 'start_at_boot' is overriden by 'enable' or CLI 'start' and
+# 'stop' commands.
 start_at_boot=false
 
 
