cmake: Fix the build with various gcc versions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ if (FRAMES)
 	set(SAN_CFLAGS "${SAN_CFLAGS} -fstack-protector-all")
 endif ()
 
-set(CMAKE_C_FLAGS "-g -Wall -Wextra -Wunused -pipe -std=gnu99")
+set(CMAKE_C_FLAGS "-Wall -Wextra -Wunused -pipe -std=gnu99")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
 
 if (CMAKE_COMPILER_IS_GNUCC OR CMAKE_C_COMPILER_ID STREQUAL "Clang")
@@ -51,7 +51,6 @@ if (CMAKE_COMPILER_IS_GNUCC OR CMAKE_C_COMPILER_ID STREQUAL "Clang")
 	#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wconversion")
 	#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wswitch-enum")
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wunused")
-	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wunused-const-variable")
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wunused-parameter")
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wunused-variable")
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wunused-macros")
@@ -84,9 +83,9 @@ if (CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebIn
 MESSAGE("DEBUG symbols enabled")
 endif()
 
-set(CMAKE_C_FLAGS_DEBUG          "-Og -fno-inline")
-set(CMAKE_C_FLAGS_RELEASE        "-O2")
-set(CMAKE_C_FLAGS_RELWITHDEBINFO "-O2")
+set(CMAKE_C_FLAGS_DEBUG          "-g -O0 -fno-inline")
+set(CMAKE_C_FLAGS_RELEASE        "-g -O2")
+set(CMAKE_C_FLAGS_RELWITHDEBINFO "-g -O2")
 set(CMAKE_C_FLAGS_MINSIZEREL     "-Os")
 
 add_definitions(-D_REENTRANT)
