CDS: WiP on github mirroring
Signed-off-by: Damien Duportal <damien.duportal.ext@ovhcloud.com>

--- a/.cds/gridinit.yml
+++ b/.cds/gridinit.yml
@@ -12,16 +12,16 @@ workflow:
     depends_on:
       - root
 
-  build:
-    pipeline: gridinit-build
-    application: gridinit
-    depends_on:
-      - root
-    conditions:
-      check:
-        - variable: cds.triggered_by.username
-          operator: ne
-          value: "cds.scheduler"
+  # build:
+  #   pipeline: gridinit-build
+  #   application: gridinit
+  #   depends_on:
+  #     - root
+  #   conditions:
+  #     check:
+  #       - variable: cds.triggered_by.username
+  #         operator: ne
+  #         value: "cds.scheduler"
 
 metadata:
   default_tags: git.branch,git.author
