--- a/.cds/gridinit-mirror.pip.yml
+++ b/.cds/gridinit-mirror.pip.yml
@@ -7,13 +7,11 @@ jobs:
     script:
      # git clone directly in the script to prevent using checkout or gitclone action
      # so we have full control on what we are doing
-    - name: Checkout Application
-      checkout: '{{ .cds.workspace }}'
-    - name: Mirror full repository
-      script: |
-        cd {{ .cds.workspace }}
-        git fetch --all --prune
-        git branch --all
+    - checkout: '{{ .cds.workspace }}'
+    - script: git branch --all
+# cd {{ .cds.workspace }}
+# git fetch --all --prune
+# git branch --all
 
 # echo git push --mirror https://openiobot:{{ .cds.proj.OPENIOBOT_GITHUB_TOKEN }}@github.com/open-io/gridinit.git
 # -   echo git push --prune --force https://openiobot:{{ .cds.proj.OPENIOBOT_GITHUB_TOKEN }}@github.com/open-io/gridinit.git +refs/remotes/origin/*:refs/heads/* +refs/tags/*:refs/tags/*
