CDS: Fix asnible_vault_password_file exports + whitespacings
Signed-off-by: Damien Duportal <damien.duportal.ext@ovhcloud.com>

--- a/.cds/gridinit-mirror.pip.yml
+++ b/.cds/gridinit-mirror.pip.yml
@@ -1,10 +1,10 @@
-version: v1.0
-name: mirror
+name: test_Script
 jobs:
 - job: Mirror to github
   steps:
   - checkout: '{{.cds.workspace}}'
-  - script:
+  - name: Mirror to github
+    script:
     - echo "HELLO"
   requirements:
   - binary: git
